test/FAIL/loadcmd/not_hexa/08_test_load.emu
#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="wrong arguments (not 32 bits hexa)"
#-------

laod boucle.o -0x123456789
